--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@
   <li>2. CSS</li>
   <li>3. JavaScript</li>
 </ol>
-<h2>WEB</h2>
+<h2>HTML</h2>
 <p>The World Wide Web (WWW), commonly known as the Web,
 is an information system where documents and other web
 resources are identified by Uniform Resource Locators
